--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,8 @@ section:nth-child(even){
 }
 
 
+
+
 /*Navagation Bar*/
 nav {
     height: 100px;
@@ -231,3 +233,100 @@ nav {
     transform: scale(1);
     opacity: 1;
 }
+
+
+/*     Projects       */
+
+.project{
+    padding-bottom: 135px;
+}
+
+.project:last-child{
+    margin-bottom:40px;
+}
+.project__img{
+    width: 100%;
+    transition: all 500ms ease;
+}
+
+.project__wrapper{
+    display: flex;
+    box-shadow:0 20px 80px rgba(0,0,0,1.7) ;
+    border-radius: 20px;
+    overflow: hidden;
+    position: relative;
+}
+
+
+.project__wrapper:before{
+    content: "";
+    position: absolute;
+    top:0;
+    left:0;
+    height:100%;
+    width:100%;
+    background-color:#1c1d25;
+    opacity: 0;
+    transition: opacity 450ms ease;
+    z-index:2;
+}
+
+.project:hover  .project__wrapper:before{
+    opacity:.7;
+}
+
+.project:hover .project__img{
+    transform: scale(1.07);
+    filter:blur(5px);
+}
+
+.project:hover .project__description{
+    opacity: 1;
+    transform: translateY(-50%);
+}
+
+.project__list{
+    padding: 40px;
+}
+
+.project__description{
+    position: absolute;
+    top:50%;
+    left:90px;
+    transform: translateY(100%);
+    max-width: 550px;
+    z-index:3;
+    opacity:0;
+    transition: transform 450ms ,  opacity 800ms;
+    
+
+}
+
+
+
+.project__description--title{
+    font-size: 40px;
+
+}
+
+.project__description--para{
+    margin: 16px 0;
+}
+
+.project__description--links{
+    font-size: 20px;
+    margin-right:16px;
+    text-decoration: none;
+}
+
+
+.project__description--title,
+.project__description--sub-title,
+.project__description--para,
+.project__description--links{
+    text-align: left;
+    color:white;
+
+}
+
+
