--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,10 @@
 
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 
 h1,
 h2,
@@ -34,8 +38,44 @@ p {
     font-size: 16px;
 }
 
+i{
+    color: #fff;
+}
+
 a{
     text-decoration: none;
+    position:relative;
+    transition: opacity 300ms ease;
+    
+}
+
+i:hover{
+    opacity: 0.7;
+}
+
+.link__hover-effect:after{
+    content:""; 
+    position:absolute;
+    height:3px;
+    width: 0;
+    bottom:-3px;
+    right:0;
+    transition:all 300ms ease;
+}
+
+.link__hover-effect__white::after{
+
+    background-color:#fff;
+}
+
+.link__hover-effect--black:after{
+
+    background-color:black;
+}
+
+.link__hover-effect:hover:after{
+   width: 100%; 
+   left: 0;
 }
 
 
@@ -59,6 +99,7 @@ li {
     width:100%;
     max-width: 800px;
     margin: 0 auto;
+    padding: 0 12px;
     
 }
 
@@ -87,6 +128,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding:0 12px;
 }
 
 
@@ -149,7 +191,20 @@ nav {
     border-radius: 50%;
     overflow: hidden;
     box-shadow:0 8px 16px rgba(0,0,0, 0.16);
+    animation: animate-profile-picture 800ms 200ms backwards;
 
+}
+
+@keyframes animate-profile-picture{
+   0%{
+    transform: scale(0);
+   } 
+   80% {
+    transform:scale(1.2)
+   }
+   100%{
+    transform: scale(1);
+   }
 }
  
 .about-me__picture{
@@ -160,9 +215,16 @@ nav {
     padding-top:8px;
 }
 
+.about-me__info--title{
+    margin-bottom: 16px;
+    animation: fade-up 650ms 400ms backwards;
+}
+
 .about-me__info--para{
     font-size:20px;
     margin-bottom: 28px;
+    animation: fade-up 650ms 500ms backwards;
+
 }
 
 
@@ -171,7 +233,18 @@ nav {
     color:#242424;
     
     padding: 0 16px;
-    
+    animation: fade-up 650ms 400ms backwards;
+}
+
+@keyframes fade-up{
+    0%{
+        opacity: 0;
+        transform: translateY(40px);
+    }
+    100%{
+         opacity: 1;
+         transform: translateY(0);
+    }
 }
 
 .about-me__image--container{
@@ -182,8 +255,34 @@ nav {
 
 .about-me__image {
     width:100%;
+    animation: fade-in 1200ms 800ms backwards;
 }
 
+@keyframes fade-in{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+.wave{
+    display: inline-block;
+    animation: animate-wave 500ms infinite ease-in-out;
+}
+
+@keyframes animate-wave{
+    0%{
+        transform:rotate(0);
+    }
+    50%{
+        transform: rotate(30deg);
+    }
+    100%{
+        transform:rotate(0);
+    }
+}
 
 /* Tech Stacck */
 
@@ -344,15 +443,26 @@ footer{
     
 }
 
-.footer_img{
-    margin-bottom:20px ;
+
+
+.footer__logo--img{
+    width:70px;
+    height: 70px;
+    padding-top: 28px;
+    
+    
 }
 
+
+
+
 .footer__social--list{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom:28px ;
+width:100% ;
+max-width: 500px;
+display: flex;
+justify-content:space-between;
+margin-bottom:28px;
+padding-right: 75px;
 }
 
 .footer__row{
@@ -365,15 +475,96 @@ footer{
 
 
 
-.footer__logo--img{
-    width:70px;
-    height: 70px;
-    
-    
-}
 
-.foot__social--link
-.footer__copyright{
+
+
+.footer__social--link,
+.footer__copyright,
+.footer__logo--popper{
     color:#fff;
 }
 
+.footer__logo--popper{
+    position: absolute;
+    right:0 ;
+    top:30px;
+    font-size:700;
+    opacity: 0;
+    transition: all 300ms ease;
+}
+
+.footer__anchor{
+    margin-bottom:20px ;
+    position: relative;
+}
+
+.footer__anchor:hover .footer__logo--popper{
+    transform: translateX(60px);
+    opacity: 1;
+
+}
+
+
+
+
+
+
+
+/*Small phones, tables, large smartphones */
+@media (max-width: 768px){
+    nav {
+        height: 68%;
+    }
+    h1 {
+        font-size: 28px;
+    }
+
+    .about-me__info--para{
+        font-size: 18px;
+    }
+    .language{
+        width:cal(100% / 3);
+
+    }
+    .project__description--para{
+        font-size: 14px;
+    }
+    .project__description{
+        left:30px;
+        padding-right:30px;
+    }
+}
+
+
+/* Small phones*/
+@media (max-width:480px ){
+    .nav__link:not(:last-child){
+        display:none;
+    }
+
+    .project__description{
+        padding: 0;
+        left: 0;
+        width:100%;
+    }
+    .project__description--para{
+        display:none;
+        
+    }
+    .project__description--links{
+        display: flex;
+        justify-content: center;
+
+    }
+
+    .project__description--title{
+        font-size: 32px;
+        line-height: 1;
+        text-align: center;
+    }
+
+    .project__description--sub-title{
+        text-align: center;
+        margin:12px 0;
+    }
+}
